--- a/catalogue page/catalogue page/style1.css
+++ b/catalogue page/catalogue page/style1.css
@@ -72,6 +72,7 @@ section{
    font-family: 'Poppins', sans-serif;
    font-size: medium;
    color: #EAF2EF;
+   cursor: pointer;
    text-decoration: none;
    font-weight: 500;
    box-shadow: 0 0 3px #F1413E;
@@ -202,6 +203,7 @@ section{
    width: 22%;
    position: relative;
    height: 65px;
+   
    z-index: 2%;
    padding-bottom: 2%;
    border-radius: 2.5rem 2.5rem;
@@ -222,7 +224,7 @@ section{
 }
  #sortoptions ul{
    list-style: none;
-  
+   
    cursor: pointer;
    color: #002533;
    font-family: 'Poppins', sans-serif;
@@ -667,33 +669,42 @@ section{
    flex-direction: column;
    height:max-content;
    margin: auto;
+   font-family: 'Poppins', sans-serif;
+   font-size: 34.32px;
+   color: #002533;
    margin-top: 1%;
 }
 .bookdescription{
   display: flex;
-  height: 380px;
-  padding-top: 3%;
-  padding-bottom: 5%;
+  height: 500px;
+  padding-top: 7%;
+  padding-bottom: 7%;
   margin-bottom: 2%;
   align-items: center;
   background-image: url(ell/blurbackround.svg);
 }
+.categoryOption{
+   width: 50%;
+   padding-bottom: 2%;
+}
 .bookdescription p{
    display: inline;
    margin-left: 5%;
+   font-size: medium;
    font-family: 'Poppins', sans-serif;
 }
 
-#bookimg{
+.bookimg{
    margin-bottom: 3%;
    margin-left: 3%;
+   box-shadow: 1px solid black;
    height: 90%;
-   width: 50%;
+   width: 45%;
 }
 #booktitle{
-   margin-bottom: 4%;
+   margin-bottom: 2%;
    justify-content: center;
-   display: inline;
+   display: block;
    font-weight: 600;
    font-size:x-large;
    color:#002533;
@@ -709,12 +720,12 @@ section{
    color:#002533;
 }
 .reserveanddetails{
-display: flex;
-gap: 2%;
-margin-left: 15%;
-align-items: baseline;
-justify-content: space-around;
-width: 100%;
+      display: flex;
+      gap: 2%;
+      margin-left: 15%;
+      align-items: baseline;
+      justify-content: space-around;
+      width: 100%;
 }
 #reserve{
       text-decoration: none;
@@ -736,7 +747,7 @@ width: 100%;
       height: 5%;
       width: 14%;
       border:1px solid #F1413E;
-      margin-top: 2%;
+      margin-top: 1%;
    }
 #reserve:hover{
    color: #f8f4f4;
@@ -754,6 +765,12 @@ width: 100%;
    font-weight:light;
    color:#F1413E;
    text-shadow:  1px 1px 1px #F1413E ;
+}
+#bookAuthor-bookCategory{
+   display: flex;
+   width: 100%;
+   padding-left: 5%;
+   gap: 5%;
 }
 #bookdetails:hover #seemorevectore{
    padding-left: 5%;
@@ -777,11 +794,13 @@ width: 100%;
    height: 20%;
    padding-left: 5%;
 }
-#book-available{
+.true{
    color: #1CD445;
+   font-size: medium;
 }
-#book-not-available{
+.false{
    color: #FF0000;
+   font-size: medium;
 }
 .bookdescriptiontitle p{
    font-family: 'Poppins', sans-serif;
@@ -791,10 +810,12 @@ width: 100%;
 }
 .book-descriptiondiv{
    display: flex;
+   
    margin-left: 4%;
 }
 #book-description {
    width: 50%;
+   margin-top: 2%;
    height: 20%;
 }
 #book-description p{
@@ -1164,5 +1185,175 @@ width: 100%;
    margin-left: 5%;
 }
   
-
+/* Search dropDown*/
+#search-dropdown{
+   height: 100%;
+    min-width:1600px;
+    margin: auto;
+    background-color: #EAF2EF;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    z-index: 2;
+    transition: 400ms ease-in-out;
+    transform: translate(-50%,-50%)scale(0);
+    -webkit-transform: translate(-50%,-50%)scale(0);
+    -moz-transform: translate(-50%,-50%)scale(0);
+    -ms-transform: translate(-50%,-50%)scale(0);
+    -o-transform: translate(-50%,-50%)scale(0);
+    -webkit-transition: 400ms ease-in-out;
+    -moz-transition: 400ms ease-in-out;
+    -ms-transition: 400ms ease-in-out;
+    -o-transition: 400ms ease-in-out;
+ }
+ #search-dropdown.active{
+    transform: translate(-50%,-50%)scale(1);
+    -webkit-transform: translate(-50%,-50%)scale(1);
+    -moz-transform: translate(-50%,-50%)scale(1);
+    -ms-transform: translate(-50%,-50%)scale(1);
+    -o-transform: translate(-50%,-50%)scale(1);
+ }
+ .search-section{
+    font-family: 'Poppins', sans-serif;
+    font-size: large;
+    font-weight: 300;
+    box-shadow: 0 0 9px #DCE0DE;
+    padding: .5em .5rem;
+    background-color: #DCE0DE;
+    border-radius: 2.9rem 2.9rem;
+    -webkit-border-radius: 2.9rem 2.9rem;
+    -moz-border-radius: 2.9rem 2.9rem;
+    -ms-border-radius: 2.9rem 2.9rem;
+    -o-border-radius: 2.9rem 2.9rem;
+    height: 60px;
+    width: 80%;
+    gap: 4%;
+    margin-left: 10%;
+    margin-top: 5%;
+    padding-left: 2%;
+    padding-right: 2%;
+    align-items: center;
+    justify-content: baseline;
+    display: flex;
+ }
+ .dropsearch-placeholder{
+    background-color:transparent ;
+    border: transparent;
+    font-weight: 700;
+    font-family: 'Poppins', sans-serif;
+    width: 80%;
+    align-items: center;
+    margin: 0%;
+ }
+ .fa-arrow-left-long{
+    color: rgba(0, 0, 0, 0.55);
+    font-size: xx-large;
+    cursor: pointer;
+ }
+ .fa-xmark{
+    color: rgba(0, 0, 0, 0.55);
+    font-size: xx-large;
+    cursor: pointer;
+ }
+ .search-section .fa-magnifying-glass{
+    color: rgba(0, 0, 0, 0.55);
+    font-size: xx-large;
+    cursor: pointer;
+ }
+ .recent-history{
+    width: 80%;
+    margin-left: 13%;
+    display: flex;
+    flex-direction: column;
+    height:270px ;
+ }
+ .recent-history p{
+    font-weight: 500;
+    color: #002533;
+    font-family: 'Poppins', sans-serif;
+    font-size: xx-large;
+ }
+ .recent-search{
+    display: flex;
+    align-items: center;
+    gap: 4%;
+    padding-bottom: 1.5%;
+    padding-top: 1%;
+    padding-left: 2%;
+    height: 20%;
+ }
+ .recent-search:hover{
+    background-color: #00000020;
+ }
+ .recent-search p{
+    font-size: large;
+    color: rgba(0, 0, 0, 0.7);
+    font-family: 'Poppins', sans-serif;
+ }
+ .recent-search .fa-magnifying-glass{
+    color: rgba(0, 0, 0, 0.7);
+ }
+ #recentsearchtitle{
+    margin-top: 2%;
+    font-weight: 500;
+    margin-left: 12%;
+    font-size: x-large;
+    color: #002533;
+    font-family: 'Poppins', sans-serif;
+ }
+ .fliter-sort{
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    gap: 10%;
+    
+ }
+ #filter-section-title {
+    margin-top: 1%;
+    margin-bottom: 2%;
+    font-weight: 500;
+    margin-left: 12%;
+    font-size: x-large;
+    color: #002533;
+    font-family: 'Poppins', sans-serif;
+ }
+ .sort-section{
+    display: flex;
+    flex-direction: column;
+    gap: 10%;
+    margin-bottom: 2%;
+ }
+ .sort-category {
+    width: 250px;
+    height:90px;
+    cursor: pointer;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    padding: .5em .5rem;
+    margin-bottom: 8%;
+    background-color: #DCE0DE;
+    border-radius: 2.9rem 2.9rem;
+    -webkit-border-radius: 2.9rem 2.9rem;
+    -moz-border-radius: 2.9rem 2.9rem;
+    -ms-border-radius: 2.9rem 2.9rem;
+    -o-border-radius: 2.9rem 2.9rem;
+    box-shadow: 0 5px 5px rgba(27, 27, 27, .5);
+ }
+ .sort-category:hover{
+    box-shadow: 0 10px 20px rgba(27, 27, 27, .5);
+ }
+ .sort-section p{
+    color: rgba(0, 0, 0, 1);
+    font-weight: 500;
+    font-size: large;
+    font-family: 'Poppins', sans-serif;
+ }
+ #search-input
+ {
+ width: 950px;
+ background-color: transparent;
+ border: transparent;
+ margin: 0;
+ outline: none;}
   
